@@ -1,3 +1,6 @@
 obj-y := main.o
+obj-y += init_task.o
 obj-y += calibrate.o
 obj-y += version.o
+
+extra-y := init_task.i
