@@ -517,5 +517,8 @@ Fri Feb 19 12:38:05 CST 2016
 
 
 Sun Feb 21 09:34:09 CST 2016
+- [+] init/init_task.c
 - [+] Diary/02-21-2016				[D] ISCA 1973 paper, accelerator
 - [+] include/asm-generic/current.h
+- [M] arch/x86/include/asm/current.h		[D] using esp to obtain task
+- [M] arch/x86/include/asm/thread_info.h
